Refactor Java toolchain selection using Gradle toolchain management